# lightrays

./: .gitignore  CMakeLists.txt  Makefile  README.md  goal  interface  out  scene-desc
include/: common.h  gal.h  materials.h  objects.h  rays.h  scene.h
models/: kiiroitori.stl
scene-gen/: gen.py
src/: gal.c  main.c  materials.c  materials.h  objects.c  objects.h  rays.c  rays.h  scene.c  scene.h
